fixed img not fitting

--- a/src/main/resources/static/css/formPost.css
+++ b/src/main/resources/static/css/formPost.css
@@ -21,6 +21,11 @@
     border: 1px solid black;
     background-position: center;
     background-size: cover;
+}
+
+#display_image img {
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
